--- a/PStorebyWhiteLotus/FaceMorphism.html
+++ b/PStorebyWhiteLotus/FaceMorphism.html
@@ -110,7 +110,7 @@ a{
 .sidehead{
 	width: 100%;
 	height: 250px;
-	background-image: linear-gradient(54deg,rgba(0,125,255,0.3),rgba(0,124,255,0.2)), url('../img/PStore.png');
+	background-image: linear-gradient(54deg,rgba(0,125,255,0.3),rgba(0,124,255,0.2)), url('../img/FaceMorphism.png');
 	background-size: contain;
 	position: relative;
   padding-bottom: 260px;
@@ -917,6 +917,32 @@ footer .bottom-details .bottom_text{
   }
 }
 </style>
+<style>
+.fli{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.fli img{
+  width: 50%;
+  height: 380px;
+}
+.fli div{
+  width: 4%;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 10% 0px;
+  color: #00ff09;
+}
+.fli div:hover{
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px 1px grey;
+  z-index: 99;
+  cursor: pointer;
+}
+</style>
 <body onload="statup()">
     <div class="flp">
         <span style="display: flex;flex-direction: row;width: 20%;">
@@ -947,7 +973,7 @@ footer .bottom-details .bottom_text{
                  <h2>WHITE LOTUS Provide of <br>Face Morphism<sup>©</sup></h2>
                   <p>Free. Any device supported Open source face scanner system<br>High secure with facial expression & multiface detactions</p><br>
                   <div class="sideheadbtn">
-                   <a href="./Form.html#googleForms?details=Register%20in%20White%20Lotus.kid"class="prehover">QUICK START</a>
+                   <a href="https://whitelotus4.github.io/FaceMorphism.github.io/Publick/"class="prehover">QUICK START</a>
                    <a href="#LearnMore"onclick="contactpage();">LEARN MORE</a>
                   </div>
                 </div>
@@ -984,15 +1010,17 @@ footer .bottom-details .bottom_text{
           </div>
           <div class="long-container-component">
             <div class="long-container-component-a">
-              <img src="../img/AnyExe.png"alt="Any-Exe">
+              <img src="../img/Emotion.png"alt="Any-Exe">
             </div>
             <div class="long-container-component-b">
               <h4>Facial Expression</h4>
-              <p>Our website is your one-stop destination for a diverse range of documents and media. Whether you're looking for Excel spreadsheets, PowerPoint presentations,
-              Word documents, programming code in C or Java, plain text resources, captivating videos, or stunning images, you'll find it all here. Our user-friendly platform 
-              allows you to upload and download these valuable resources anytime you need them, all conveniently organized with unique links for each file. No more endless 
-              searches or limitations – our website empowers you with the freedom to access and share information in the format that suits you best. Dive in and unlock the 
-              limitless potential of our all-inclusive library system!</p>
+              <p>Our WHITE LOTUS website boasts an extensive array of over 72 facial expressions and more than 10 distinct emotions, all meticulously designed to 
+                provide highly accurate recognition and analysis of facial features. We believe in the power of facial expressions as a gateway to understanding 
+                human emotions and characteristics. With our advanced technology, we can not only identify basic attributes like age and gender but also delve 
+                into the intricate world of emotions, allowing us to offer a comprehensive profile of your facial expressions. Our dedication to precision 
+                ensures that you receive the most accurate results, making our platform an invaluable resource for both educational exploration and real-world 
+                applications. Discover the depth of our facial recognition capabilities and unlock insights into the fascinating world of human emotions and 
+                expressions with WHITE LOTUS.</p>
             </div>
           </div>
         </div>
@@ -1179,78 +1207,66 @@ footer .bottom-details .bottom_text{
           <h3>About documentation</h3>
           <p>There are several types of documentation avalible on this website:</p>
           <ul>
-            <li><a href="#Pre-requirement"><b>Pre-requirement</b></a></li>
-            <ul>
-              <li><a href="#madeProfile">Make your profile picture</a></li>
-              <li><a href="#uniqueNaame">Select a unique name</a></li>
-              <li><a href="#biodata">Write your Biodata</a></li>
-              <li><a href="#selfquote">Find your own quote</a></li>
-              <li><a href="#socialIcon">Creat social media accounts</a></li>
+            <li><a href="#Introduction"><b>Introduction</b></a></li>
               <ul>
-                <li><a href="#fBacc">Facebook account</a></li>
-                <li><a href="#lIacc">Linkedin account</a></li>
-                <li><a href="#yTacc">Youtube account</a></li>
+                <li><a href="#purpose">Purpose and Features</a></li>
+                <li><a href="#privacyState">Privacy statement</a></li>
               </ul>
-              <li><a href="#gleacc">Prepare a google account</a></li>
-            </ul>
-            <li><a href="#securityKey"><b>Understand security keys</b></a></li>
-            <ul>
-              <li><a href="#privacyState">Privacy statement</a></li>
-              <li><a href="#userSecurity">Profile security keys</a></li>
-            </ul>
-            <li><a href="#register"><b>Register yourself in White Lotus</b></a></li>
-            <li><a href="#Post-requirement"><b>Post-requirement</b></a></li>
-            <ul>
-              <li><a href="#id&password">Save your user-id & password</a></li>
-              <li><a href="#logindes">Login into your deshbord</a></li>
-              <li><a href="#upload">Enlist your products</a></li>
-              <ul>
-                <li><a href="#dpofP">Creat a thumnail of product</a></li>
-                <li><a href="#Pname">Unmatchable product name</a></li>
-                <li><a href="#slider">3 slider images</a></li>
-                <li><a href="#despo">Description of product</a></li>
-                <li><a href="#driveLink">Drive link</a></li>
-                <li><a href="#isbn">ISBN no</a></li>
-                <li><a href="#aboutTable">About table of product</a></li>
-                <ul>
-                  <li><a href="#tp">Type of product</a></li>
-                  <li><a href="#wp">Wight of product</a></li>
-                  <li><a href="#cl">Content language</a></li>
-                  <li><a href="#etc">Etc</a></li>
-                </ul>
-                <li><a href="#sV">Supporting video</a></li>
-                <li><a href="#App">Another parts of product</a></li>
-              </ul>
-            </ul>
+            <li><a href="#access"><b>How to Access the Website</b></a></li>
             <li><a href="#other"><b>Others</b></a></li>
           </ul>
-          <p>Point to be noted that most the details which given by author is public,
-           mean author name, dp, social account link, bio etc is showing in his/her 
-           profile and where contributed by author.</p>
+          <p>Point to be noted that most the details which provided by WHITE LOTUS about Face Morphism utilite 
+            is official information, don't collide it to any fake information</p>
         </div>
-        <div class="drop"id="Pre-requirement">
-          <h3>Pre-requirement:</h3>
-          <p>Before you upload a product to our website, please ensure you meet the following prerequisites:</p>
+        <div class="drop"id="Introduction">
+          <h3>Introduction:</h3>
+          <p>Welcome to the WHITE LOTUS utility website, a cutting-edge platform that brings face morphism to your fingertips. 
+            In this introductory section, we will provide you with a comprehensive overview of our website's purpose 
+            and its exciting features. WHITE LOTUS is designed to harness the power of facial recognition technology 
+            to offer insights into various aspects of your face, such as age, gender, and emotions. However, it's 
+            essential to us that you understand the importance of your privacy. Before diving into the capabilities 
+            of the face scanner, we strongly recommend reviewing our Privacy Statement, which outlines how we handle 
+            your data and ensures your information is kept secure. This guide will walk you through how to get 
+            started, using your webcam effectively, understanding the face detection process, and addressing common 
+            queries and concerns. We are committed to providing you with a seamless and informative experience, so 
+            let's embark on this journey of facial exploration together.</p>
         </div>
-        <div class="drop" id="madeProfile">
-          <h4>Make your profile picture</h4>
-          <p>We value your contributions to our community. To enhance your profile, please follow these instructions 
-            when uploading your profile picture:<br>
-            1. Ensure the picture is a square (1:1 aspect ratio) to maintain a consistent look.<br>
-            2. Keep the file size below 50KB to optimize website performance.<br>
-            3. Picture extension should be in Jpeg or Jpg or Png formate.<br>
-            By following these guidelines, you'll help create a cohesive and efficient experience for all users.
-          </p>
+        <div class="drop" id="purpose">
+          <h4>Purpose and Features</h4>
+          <p>WHITE LOTUS initially began as a captivating project for a college tech fest, but now, we're thrilled to 
+            extend it to a broader audience, absolutely free of charge. Our primary objective is to harness the power 
+            of cutting-edge facial recognition technology for both educational and practical purposes. At the heart 
+            of WHITE LOTUS lies the ability to detect a user's face and provide insightful information, such as age, 
+            gender, and emotions. This serves as an excellent educational tool, allowing users to understand how facial 
+            recognition works and its real-world applications. Whether you're a student curious about AI technology or 
+            an individual interested in exploring the capabilities of high-level tech, WHITE LOTUS is here to guide you. 
+            We aim to make this experience accessible and enjoyable for everyone while ensuring that your privacy and 
+            data security are paramount. In the following sections, we will delve into the specifics of using the website 
+            effectively and understanding the science behind facial detection. Let's embark on this exciting journey of 
+            learning and discovery together.</p>
         </div>
-        <div class="drop" id="uniqueNaame">
-          <h4>Select a unique name</h4>
-          <p>Your unique identity adds value to our White Lotus community. When choosing your pen name or real name 
-            for your profile, please follow these important instructions:<br>
-            1. Ensure your pen name or real name is distinct and not identical to any other user on our platform.<br>
-            2. This name does not contain any special symbols or mathematical expression.<br>
-            3. No vulnerable meaning and platform dependent characters.<br>
-            By selecting a unique identity, you'll contribute to a diverse and easily recognizable community. 
-          </p>
+        <div class="drop" id="privacyState">
+          <h4>Privacy statement</h4>
+          <p>At WHITE LOTUS, your privacy is our utmost concern. We are committed to safeguarding your personal information 
+            and ensuring its secure handling. For a comprehensive understanding of how we collect, use, and protect your data, 
+            please read our <a href="#"onclick="showprivacy();">Privacy Policy</a>. This document outlines the measures we have 
+            in place to protect your information, the purposes for which we collect data, and your rights as a user of our 
+            website. We encourage you to review this policy thoroughly to make informed decisions about your interaction with 
+            our platform. Rest assured that your data is handled with the utmost care and in compliance with all applicable 
+            data protection regulations. If you have any questions or concerns regarding your privacy or data security, please 
+            don't hesitate to contact our dedicated support team, whose contact information can be found in the "Contact Support" 
+            section of this documentation. Thank you for entrusting us with your information, and we look forward to providing 
+            you with a safe and enjoyable experience on WHITE LOTUS.</p>
+        </div>
+        <div class="drop" id="access">
+          <h4>How to Access the Website</h4>
+          <p>Accessing the WHITE LOTUS website is a straightforward process designed to provide you with quick and convenient 
+            entry. There are several ways to reach our platform. You can simply enter "Face Morphism by WHITE LOTUS" in your preferred search 
+            engine, and our website should appear in the search results. Alternatively, you can directly access the site by 
+            typing the URL into your web browser. Once on the home page, you will find a user-friendly "<b>Quick Start</b>" button 
+            prominently displayed. Clicking this button will seamlessly navigate you to the main website, where you can 
+            begin your journey of facial recognition exploration and learning. We've designed these access options with your 
+            ease of use in mind, ensuring a hassle-free start to your Face Morphism experience.</p>
         </div>
       </div>
     </section>
@@ -1727,16 +1743,16 @@ function profileMaker(){
 </script>
 <script>
 // Check if count is stored in Local Storage
-// if (localStorage.getItem('visitCount') === null) {
+if (localStorage.getItem('visitCount') === null) {
   // If not, initialize count to 0
-   //localStorage.setItem('visitCount', 0);
-// }
+   localStorage.setItem('visitCount', 0);
+}
 // Retrieve the current visit count from Local Storage
-//let count = parseInt(localStorage.getItem('visitCount'));
+let count = parseInt(localStorage.getItem('visitCount'));
 // Increment the visit count
-//count++;
+count++;
 // Store the updated count back in Local Storage
-//localStorage.setItem('visitCount', count);
+localStorage.setItem('visitCount', count);
 function animateValue(obj,start,end,duration){
   let startTime=null;
   const step = (timestamp) => {
