--- a/PStorebyWhiteLotus/User_Login.html
+++ b/PStorebyWhiteLotus/User_Login.html
@@ -84,7 +84,7 @@
             </div>
             <p class="voidSZ" style="text-align: justify;">Upload your product what you want in our PStore, Ebook/ Report Paper/ Biography/ Notes/ Presentation ppt/ Book pdf/ Research Paper/ Question Paper etc in one form. Creat required information
             or media which are need to publish them, for more information <a href="./PStore.html#Docs">Click</a> this link.</p>
-            <ul><li style="justify-content: left;">Last date of contribution: <span style="margin-left: 4px;" id="lastUpdate">No records!</span></li></ul>
+            <ul style="list-style: none;"><li style="justify-content: left;">Last date of contribution: <span style="margin-left: 4px;" id="lastUpdate">No records!</span></li></ul>
           </div>
         </div>
         <div class="clear"></div>
@@ -1405,7 +1405,7 @@ function popUpR3(comment){
   popUpDisplay();
   clearPopUp();
 }
-function clearPopUp(){
+function clearPopUp(){//this contain error
   if(rear!=0){
     popUpList[rear]=0;
     rear--;
