--- a/index.html
+++ b/index.html
@@ -2824,7 +2824,7 @@ footer .bottom-details .bottom_text{
                 </div>
                 <div class="profile_card"id="krish">
                     <div class="user_img">
-                        <img src="./fav-icon/Krishdp.jpg" height="100" width="100" alt="profile">
+                        <img src="http://picasaweb.google.com/data/entry/api/user/krishnendumitra24@gmail.com?alt=json" height="100" width="100" alt="profile">
                     </div>
                     <div class="user_details">
                         <h5>Krishnendu Mitra</h5>
